# jlc-esp32s3

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  README.md  sdkconfig  sdkconfig.defaults
_external/x-track/: README.md
components/bsp/: CMakeLists.txt  Kconfig  idf_component.yml
components/bsp/include/: bsp_audio.h  bsp_backlight.h  bsp_board.h  bsp_camera.h  bsp_display.h  bsp_gnss.h  bsp_i2c.h  bsp_imu.h  bsp_pmu.h  bsp_sdcard.h  bsp_touch.h  bsp_ui.h
components/bsp/src/boards/auras3/: audio.c  backlight.c  board.c  board.cmake  display.c  gnss.c  imu.c  pmu.c  sdcard.c  touch.c
components/bsp/src/boards/auras3/internal/: auras3_i2c.c  auras3_i2c.h  auras3_ioexp.c  auras3_ioexp.h  auras3_panel.c  auras3_panel.h  auras3_pins.h
components/bsp/src/boards/doers3/: audio.c  backlight.c  board.c  board.cmake  camera.c  display.c  gnss.c  imu.c  sdcard.c  touch.c
components/bsp/src/boards/doers3/internal/: doers3_i2c.c  doers3_i2c.h  doers3_ioexp.c  doers3_ioexp.h  doers3_pins.h  pca9557.c  pca9557.h
components/bsp/src/common/: audio.c  audio.h  audio_stub.c  camera_stub.c  imu_stub.c  ioexp.c  ioexp.h  lock.h  sdcard.c  sdcard.h  ui.c
components/bsp/src/common/bus/: bsp_i2c_bus.c  bsp_i2c_bus.h  bsp_i2c_scan.c
components/bsp/src/common/lvgl/: bsp_lvgl_buffer.c  bsp_lvgl_buffer.h  bsp_lvgl_port.c  bsp_lvgl_port.h
components/bsp/src/common/unsupported/: camera_unsupported.c  pmu_unsupported.c
components/bsp/src/drivers/audio/: es7210.c  es7210.h  es8311.c  es8311.h
components/bsp/src/drivers/backlight/: backlight_ledc.h  ledc.c
components/bsp/src/drivers/display/: st7789.c  st7789.h
components/bsp/src/drivers/imu/: qmi8658.h
components/bsp/src/drivers/ioexp/: pca9557.c  pca9557.h  tca9554.c  tca9554.h
components/bsp/src/drivers/power/: axp2101.c  axp2101.h
components/bsp/src/drivers/touch/: cst9217.c  cst9217.h  ft5x06.c  ft5x06.h  ft6336.c  ft6336.h
components/bsp/src/internal/: bsp_display_internal.h
components/bsp/test_app/: bsp.sh  project.cmake
components/bsp/test_app/audio/: CMakeLists.txt
components/bsp/test_app/audio/main/: CMakeLists.txt  test_bsp_audio.c
components/bsp/test_app/board/: CMakeLists.txt  sdkconfig.defaults
components/bsp/test_app/board/main/: CMakeLists.txt  test_bsp_board.c
components/bsp/test_app/camera/: CMakeLists.txt  sdkconfig.defaults
components/bsp/test_app/camera/main/: CMakeLists.txt  test_bsp_camera.c
components/bsp/test_app/gnss/: CMakeLists.txt  sdkconfig.defaults
components/bsp/test_app/gnss/main/: CMakeLists.txt  test_bsp_gnss.c
components/bsp/test_app/imu/: CMakeLists.txt
components/bsp/test_app/imu/main/: CMakeLists.txt  test_bsp_imu.c
components/bsp/test_app/pmu/: CMakeLists.txt  sdkconfig.defaults
components/bsp/test_app/pmu/main/: CMakeLists.txt  test_bsp_pmu.c
components/bsp/test_app/sdcard/: CMakeLists.txt
components/bsp/test_app/sdcard/main/: CMakeLists.txt  test_bsp_sdcard.c
components/bsp/test_app/shell/: CMakeLists.txt  sdkconfig.defaults
components/bsp/test_app/shell/main/: CMakeLists.txt  test_shell.c
components/bsp/test_app/touch/: .gitignore  CMakeLists.txt  build-auras3.sh  build-doers3.sh
components/bsp/test_app/touch/main/: CMakeLists.txt  test_bsp_touch.c
components/bsp/test_app/ui/: CMakeLists.txt  sdkconfig.defaults
components/bsp/test_app/ui/main/: CMakeLists.txt  test_bsp_ui.c
components/bsp_audio/: CMakeLists.txt
components/bsp_audio/include/: bsp_audio.h
components/bsp_audio/src/: bsp_audio.c
components/bsp_backlight/: CMakeLists.txt
components/bsp_backlight/include/: bsp_backlight.h
components/bsp_backlight/src/: bsp_backlight.c  bsp_backlight_backend.h  bsp_backlight_backend_select.c
components/bsp_boarddb/: CMakeLists.txt  Kconfig
components/bsp_boarddb/include/: bsp_boarddb.h
components/bsp_boarddb/src/: bsp_boarddb.c  bsp_boarddb_priv.h
components/bsp_boarddb/src/boards/: auras3.c  doers3.c
components/bsp_camera/: CMakeLists.txt
components/bsp_camera/include/: bsp_camera.h
components/bsp_camera/src/: bsp_camera.c  bsp_camera_backend.h  bsp_camera_backend_select.c
components/bsp_camera/src/boards/: bsp_camera_auras3.c  bsp_camera_doers3.c
components/bsp_camera/src/drivers/: bsp_camera_gc0308.c  bsp_camera_gc0308.h
components/bsp_camera/test_app/: CMakeLists.txt  sdkconfig.defaults
components/bsp_camera/test_app/main/: CMakeLists.txt  test_bsp_camera.c
components/bsp_display/: CMakeLists.txt
components/bsp_display/include/: bsp_display.h
components/bsp_display/src/: bsp_display.c  bsp_display_backend.h  bsp_display_backend_select.c
components/bsp_gnss/: CMakeLists.txt
components/bsp_gnss/include/: bsp_gnss.h
components/bsp_gnss/src/: bsp_gnss.c
components/bsp_i2c_bus/: CMakeLists.txt
components/bsp_i2c_bus/include/: bsp_i2c_bus.h
components/bsp_i2c_bus/src/: bsp_i2c_bus.c
components/bsp_imu/: CMakeLists.txt
components/bsp_imu/include/: bsp_imu.h
components/bsp_imu/src/: bsp_imu.c  bsp_imu_backend.h  bsp_imu_backend_select.c
components/bsp_ioexp/: CMakeLists.txt
components/bsp_ioexp/include/: bsp_ioexp.h
components/bsp_ioexp/src/: bsp_ioexp.c
components/bsp_sdcard/: CMakeLists.txt
components/bsp_sdcard/src/: bsp_sdcard.c
components/bsp_touch/: CMakeLists.txt
components/bsp_touch/src/: bsp_touch.c  bsp_touch_backend.h  bsp_touch_backend_select.c
components/bsp_touch/src/drivers/: bsp_touch_ft5x06.c  bsp_touch_ft5x06.h
components/bsp_ui/: CMakeLists.txt
components/bsp_ui/include/: bsp_ui.h
components/shell/: CMakeLists.txt  README.md
components/x-track/: CMakeLists.txt
components/x-track/HAL/: HAL.cpp  HAL.h  HAL_Audio.cpp  HAL_Buzz.cpp  HAL_Clock.cpp  HAL_Encoder.cpp  HAL_GPS.cpp  HAL_IMU.cpp  HAL_MAG.cpp  HAL_Power.cpp  HAL_SD_CARD.cpp
components/x-track/HAL/TinyGPSPlus/: TinyGPS++.cpp  TinyGPS++.h  TinyGPSPort.h
docs/: bsp_design.md
docs/bsp/: README.md  architecture.md  porting-guide.md  status.md
docs/hw/: auras3-display-te.md  auras3-pmu-key.md  lvgl-buffer-benchmark.md
main/: CMakeLists.txt  idf_component.yml  main.cpp
tools/: check.sh
(+40 files in other folders)
